# sbd-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.txt  README.md  deploy-docs.sh
.github/workflows/: rust.yml
data/: 0-mo.sbd  1-invalid.sbd  2-location.mo.sbd
init.d/: iridiumd
src/: directip.rs  error.rs  filesystem.rs  information_element.rs  lib.rs  logger.rs  main.rs  message.rs  mo.rs  mobile_originated.rs  mobile_terminated.rs  storage.rs
src/mo/: header.rs  information_element.rs  location.rs  message.rs  mod.rs  session_status.rs
src/mt/: confirmation.rs  header.rs  mod.rs
src/storage/: filesystem.rs  memory.rs  mod.rs
