[package]
name = "sbd"
version = "0.2.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Read and write Iridium Short Burst Data (SBD) messages"
repository = "https://github.com/gadomski/sbd-rs"
documentation = "http://gadomski.github.io/sbd-rs"
keywords = ["iridium", "sbd"]
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["science"]
edition = "2021"

[dependencies]
byteorder = "1.1"
chrono = "0.4"
docopt = "1"
failure = "*"
log = "0.3"
quick-error = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"

[dev-dependencies]
tempdir = "0.3"

[[bin]]
name = "sbd"
doc = false
